@@ -1,1 +1,15 @@
 # VisionLauncherElementsEditor
+Data Editor for Cybermist's Launcher
+
+
+# Requirements:
+
+-JAVA FX x64 SDK		- https://gluonhq.com/products/javafx/
+
+-Setup JavaFX		- https://www.youtube.com/watch?v=nz8P528uGjk
+
+
+# VM Arguments:
+```
+--module-path "C:\Program Files\Java\javafx-sdk-22\lib" --add-modules javafx.controls,javafx.graphics,javafx.fxml
+```
